user/buildbork
make[1]: Entering directory `/home/tyson/pistachio/user/lib'
make[2]: Entering directory `/home/tyson/pistachio/user/lib/l4'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/tyson/pistachio/user/lib/l4'
make[2]: Entering directory `/home/tyson/pistachio/user/lib/io'
===> debug.cc
gcc -x c++ -I../../include -I../.. -I/usr/lib/gcc/i686-linux-gnu/4.8/include   -fno-stack-protector -nostdinc -g -O2 -m32 -O2 -g -Wall -Wshadow  -Wno-conversion -fno-exceptions -c debug.cc -o debug.o
In file included from debug.cc:1:0:
../../include/stdio.h:57:21: error: field ‘mutex’ has incomplete type
  struct kenge_mutex mutex;
                     ^
make[2]: *** [debug.o] Error 1
make[2]: Leaving directory `/home/tyson/pistachio/user/lib/io'
make[1]: *** [subdirs-all] Error 2
make[1]: Leaving directory `/home/tyson/pistachio/user/lib'
make: *** [subdirs-all] Error 2
